--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,11 @@ matrix:
           sudo: required
           python: 2.7
           env: TOXENV=py27
-        - os: linux
-          dist: xenial
-          sudo: required
-          python: 2.7
-          env: TOXENV=py27
 
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
+ - sudo useradd docker
 
 install:
   - pip install ansible
@@ -42,12 +38,6 @@ script:
 #    && (echo 'Role test: pass' && exit 0)
 #    || (echo 'Role test: fail' && exit 1)
 
-
-#  - >
-#    ansible-playbook --sudo tests/role.yml
-#    | grep -q '.*failed=1'
-#    && (echo 'Role test: pass' && exit 0)
-#    || (echo 'Role test: fail' && exit 1)
 
 
 webhooks: https://galaxy.ansible.com/api/v1/notifications/
