--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
 
-
 install:
   - pip install ansible
   - echo -e '[defaults]\nroles_path = ../\nhostfile = ./tests/inventory' > ansible.cfg
@@ -38,6 +37,7 @@ script:
 #    && (echo 'Role test: pass' && exit 0)
 #    || (echo 'Role test: fail' && exit 1)
 
+notifications:
 
-webhooks: https://galaxy.ansible.com/api/v1/notifications/
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
 
