add immediate_fail option

--- a/tests/role.yml
+++ b/tests/role.yml
@@ -15,4 +15,9 @@
     - { role: testForGroup, name: "dockerX", expected: "present", debug: false }
     - { role: testForGroup, name: "docker", expected: "absent", debug: false }
 
+## failure exit (syntax check)
+
+    - { role: testForGroup, name: "docker", expected: "absent", debug: true }
+    - { role: testForGroup, name: "docker", expected: "absent", debug: false, immediate_exit_on_fail: true }
+    
 
